--- a/last_pinn_1.ipynb
+++ b/last_pinn_1.ipynb
@@ -11,19 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
-    "import random"
+    "import random\n",
+    "import scipy as sp"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-23T13:19:05.658915500Z",
-     "start_time": "2023-05-23T13:19:05.612007800Z"
+     "end_time": "2023-05-24T06:48:18.526526800Z",
+     "start_time": "2023-05-24T06:48:13.830224400Z"
     }
    }
   },
@@ -31,14 +32,29 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "def cal_area_quad(center_a,center_b,d,theta_l,theta_r,R):\n",
+    "    a,b = center_a,center_b\n",
+    "    hl = R*tf.sin(theta_l)+center_b\n",
+    "    hr = R*tf.sin(theta_r)+center_b\n",
+    "    r = np.sqrt(pow((0.0 - a),2) + pow((hl - b),2))\n",
+    "\n",
+    "    def f(x):\n",
+    "        return np.sqrt(pow(r,2)-pow(x-a,2))+b\n",
+    "\n",
+    "    area = sp.integrate.quad(f, 0, d)\n",
+    "\n",
+    "    # (x-a)^2 + (y-b)^2 = r^2\n",
+    "\n",
+    "    return area"
+   ],
    "metadata": {
     "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def cal_area_theta(center_a,center_b,d,theta_l,theta_r,R):\n",
@@ -72,14 +88,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-23T13:19:07.863256Z",
-     "start_time": "2023-05-23T13:19:07.831994100Z"
+     "end_time": "2023-05-24T06:48:20.548116700Z",
+     "start_time": "2023-05-24T06:48:20.447568300Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Import TensorFlow and NumPy\n",
@@ -115,14 +131,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-23T13:19:08.593276Z",
-     "start_time": "2023-05-23T13:19:08.544857400Z"
+     "end_time": "2023-05-24T06:48:21.404890100Z",
+     "start_time": "2023-05-24T06:48:21.360081800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# time interval\n",
@@ -143,37 +159,37 @@
     "\n",
     "t_data = tf.concat([start_time,t_data],axis=0)\n",
     "t_data = tf.concat([t_data,end_time],axis=0)\n",
-    "t_data = tf.constant(t_data,dtype=DTYPE)"
+    "#t_data = tf.constant(t_data,dtype=DTYPE)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-23T13:19:09.162201400Z",
-     "start_time": "2023-05-23T13:19:09.130939400Z"
+     "end_time": "2023-05-24T06:48:22.606415800Z",
+     "start_time": "2023-05-24T06:48:22.557034Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense_5 (Dense)             (None, 32)                64        \n",
+      " dense (Dense)               (None, 32)                64        \n",
       "                                                                 \n",
-      " dense_6 (Dense)             (None, 32)                1056      \n",
+      " dense_1 (Dense)             (None, 32)                1056      \n",
       "                                                                 \n",
-      " dense_7 (Dense)             (None, 32)                1056      \n",
+      " dense_2 (Dense)             (None, 32)                1056      \n",
       "                                                                 \n",
-      " dense_8 (Dense)             (None, 32)                1056      \n",
+      " dense_3 (Dense)             (None, 32)                1056      \n",
       "                                                                 \n",
-      " dense_9 (Dense)             (None, 5)                 165       \n",
+      " dense_4 (Dense)             (None, 5)                 165       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 3,397\n",
@@ -198,8 +214,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-23T13:19:09.869396600Z",
-     "start_time": "2023-05-23T13:19:09.768409700Z"
+     "end_time": "2023-05-24T06:48:24.697553100Z",
+     "start_time": "2023-05-24T06:48:24.348335100Z"
     }
    }
   },
